# oh-my-starship

./: .gitignore  CLAUDE.md  LICENSE  README-zh_CN.md  README-zh_TW.md  README.md  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.github/workflows/: release.yml
@types/: global.d.ts
src/: app-context.tsx  app.tsx  global.css  index.html  main.tsx  routes.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/ui/: button.tsx  color-picker-input.tsx  dialog.tsx  dropdown-menu.tsx  index.ts  input.tsx  label.tsx  sonner.tsx  switch.tsx  tabs.tsx
src/hooks/: use-theme.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  zh-TW.json  zh.json
src/lib/: backup-names.ts  presets.ts  query.ts
src/lib/utils/: index.ts
src/pages/: config-editor.tsx  config-list.tsx  home.tsx  settings.tsx
src/pages/starship/: index.tsx  module-editor.tsx  preset-selector.tsx  toml-editor.tsx  toml-utils.ts
src/pages/starship/modules/: character-module.tsx  directory-module.tsx  git-module.tsx  language-modules.tsx  module-page-shell.tsx  time-module.tsx
src/services/: api.ts  cmds.ts
